<resources>
    <string name="app_name">SimPl</string>
    <string name="simpl_logo">simpllogo</string>
    <string name="start_tests">Start Tests</string>
    <string name="test_information">Test Information</string>
    <string name="settings">Settings</string>
    <string name="paricipant_id">Paricipant ID:</string>
    <string name="name">Name</string>
    <string name="select_test">Select Test:</string>
    <string name="anti_saccade">Anti-Saccade</string>
    <string name="task_switching">Task Switching</string>
    <string name="startcircle">startCircle</string>
    <string name="target1">target1</string>
    <string name="target3">target3</string>
    <string name="target2">target2</string>
    <string name="target4">target4</string>
    <string name="_0">0</string>
    <string name="movement_time">Movement Time: </string>
    <string name="initiation_time">Initiation Time: </string>
    <string name="Version">v1.0</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="article_title">Test Instructions</string>
    <string name="start_test">Start Test</string>
    <string name="introduction">Introduction</string>

    <!-- Saccade Strings -->
    <string name="SaccadeIntroductionText">The following test contains two tasks: Pro Point and Anti Point tests. The two tasks should take around 1 minute each. The following steps will explain how to complete the tests.</string>
    <string name="Step1SaccadeHeader">Step 1</string>
    <string name="Step1Saccade">To start the Pro Point test, press and hold the middle circle.</string>
    <string name="Step2SaccadeHeader">Step 2</string>
    <string name="Step2Saccade">Touch the solid square that appears.</string>
    <string name="Step3SaccadeHeader">Step 3</string>
    <string name="Step3Saccade">Repeat Steps 1 and 2 fourty-eight times. After you have completed the Pro Point task, the Anti Point task will begin.</string>
    <string name="Step4SaccadeHeader">Step 4</string>
    <string name="Step4Saccade">To begin the Anti Point test, press and hold the middle circle.</string>
    <string name="Step5SaccadeHeader">Step 5</string>
    <string name="Step5Saccade">Touch the square opposite to the solid square. Always touch the square to which the arrow is pointing.</string>

    <!-- Task Switching Strings -->
    <string name="SwitchingIntroductionText">The following test contains two tasks: Numeric and Spatial tests. The two tasks should take around TBD minutes each. In each task you will have to press a button based on what appears on the screen. The following steps will explain how to complete the tests.</string>
    <string name="Step1SwitchingHeader">Numeric Test Step 1</string>
    <string name="Step1Switching">During the Numeric test, a random number will appear on the screen. During the first portion of this test, the only active buttons are the \'4\' and \'7\'. If the number that appears on the screen is greater than 5, press the \'7\' button. If it is less than 5, press the \'4\' button.</string>
    <string name="Step2SwitchingHeader">Numeric Test Step 2</string>
    <string name="Step2Switching">After a short amount of trials, the \'4\' and \'7\' buttons will deactivate and the \'-\' and \'+\' buttons will become active. When this happens, press the \'-\' button if the number that appears is an even number and press the \'+\' button if the number that appears is an odd number. </string>
    <string name="Step3SwitchingHeader">Numeric Test Step 3</string>
    <string name="Step3Switching">The activated buttons will alternate every 2 trials until the test is over. Continue to press the activated buttons as described in Steps 1 and 2.</string>
    <string name="Step4SwitchingHeader">Spatial Test Step 1</string>
    <string name="Step4Switching">After the Numeric test is complete, you will begin the Spatial test. During this test, a square will appear either on the top portion of the screen, or the bottom portion. Initially, the only active buttons are the \'4\' and \'7\'. If the square is on the top of the screen, press the \'7\' button. If it is on the lower portion of the screen, press then \'4\' button.</string>
    <string name="Step5SwitchingHeader">Spatial Step 2</string>
    <string name="Step5Switching">After a short amount of trials, the \'4\' and \'7\' buttons will deactivate and the \'-\' and \'+\' buttons will become active. When the square is on the top of the screen, press the \'+\' button, and if it is on the bottom portion of the screen, press the \'-\' button. </string>
    <string name="Step6SwitchingHeader">Spatial Step 3</string>
    <string name="Step6Switching">The activated buttons will alternate every 2 trials until the test is over. Continue to press the activated buttons as described in Steps 1 and 2.</string>

    <string name="primaryInput">4</string>
    <string name="primaryInput2">7</string>
    <string name="secondaryInput">+</string>
    <string name="secondaryInput2">-</string>
    <string name="start">Start</string>
    <string name="primaryInputMinus">-</string>
    <string name="primaryInput2Plus">+</string>

    <string name="title_activity_settings">Settings</string>
    <string name="settingsPIN">0000</string>
    <string name="enter">Enter</string>
    <string name="enter_4_digit_password_below">Enter 4-digit Password Below</string>
    <string name="title_activity_nback">NbackActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
