<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AntiSaccade">

    <ImageView
        android:id="@+id/startCircle"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:contentDescription="@string/startcircle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/startcircle" />

    <ImageView
        android:id="@+id/target0"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="75dp"
        android:contentDescription="@string/target1"
        app:layout_constraintBottom_toTopOf="@+id/startCircle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/emptysquare"
        android:tag="0"
        android:onClick="targetTouched" />

    <ImageView
        android:id="@+id/target2"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="75dp"
        android:contentDescription="@string/target3"
        android:onClick="targetTouched"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startCircle"
        app:srcCompat="@drawable/emptysquare"
        android:tag="2" />

    <ImageView
        android:id="@+id/target1"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="200dp"
        android:contentDescription="@string/target2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/startCircle"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/emptysquare"
        android:onClick="targetTouched"
        android:tag="1" />

    <ImageView
        android:id="@+id/target3"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginEnd="75dp"
        android:layout_marginRight="75dp"
        android:contentDescription="@string/target4"
        android:onClick="targetTouched"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/startCircle"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/emptysquare"
        android:tag="3" />

    <TextView
        android:id="@+id/saccadeCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/_0"
        android:textSize="@dimen/tablet_header1_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/initiationTimeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/initiation_time"
        android:textSize="@dimen/phone_head1_text"
        app:layout_constraintBottom_toTopOf="@+id/movementTimeTV"
        app:layout_constraintStart_toStartOf="@+id/movementTimeTV"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/movementTimeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/movement_time"
        android:textSize="@dimen/phone_head1_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/initTimeValueTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/_0"
        android:textSize="@dimen/phone_head1_text"
        app:layout_constraintBottom_toBottomOf="@+id/initiationTimeTV"
        app:layout_constraintStart_toEndOf="@+id/initiationTimeTV"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/movementTimeValueTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/_0"
        android:textSize="@dimen/phone_head1_text"
        app:layout_constraintBottom_toBottomOf="@+id/movementTimeTV"
        app:layout_constraintStart_toEndOf="@+id/movementTimeTV"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/arrow1"
        android:layout_width="65dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/target1"
        app:layout_constraintStart_toEndOf="@+id/startCircle"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/arrow0"
        android:layout_width="50dp"
        android:layout_height="75dp"
        android:rotation="270"
        app:layout_constraintBottom_toTopOf="@+id/startCircle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/target0"
        app:srcCompat="@drawable/arrow"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/arrow2"
        android:layout_width="50dp"
        android:layout_height="75dp"
        android:rotation="90"
        app:layout_constraintBottom_toTopOf="@+id/target2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startCircle"
        app:srcCompat="@drawable/arrow"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/arrow3"
        android:layout_width="65dp"
        android:layout_height="30dp"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/startCircle"
        app:layout_constraintStart_toEndOf="@+id/target3"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow"
        android:visibility="invisible" />

</androidx.constraintlayout.widget.ConstraintLayout>